reportdesign: avoid assertion on duplicate properties ...

... from XMLAutoStylePoolProperties that happens when opening bugdoc
from fdo#87044.

Change-Id: I7002cf5176cd326f57b50fb6030ffb89160c237b
(cherry picked from commit 541800fa17c6a4f9552c76e5290b5011addb1264)